BoardTest.java 수정